[build-system]
requires = ["setuptools >= 44.1.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  { name="Nikolay Mirin", email="nmirin@nvidia.com" },
]
description = "A script to analyze the Git contributors by folder"
readme = "README.md"
requires-python = ">= 3.8"
dynamic = ["version"]
name = "generate-codeowners"
dependencies = [
  "requests >= 2.3.4",
  "PyYAML>=6.0.2"
]

[project.scripts]
codeowners-cli = "codeowners:main"


[tool.setuptools.dynamic]
version = {attr = "codeowners.__version__"}