[build-system]
requires = ["setuptools >= 44.1.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  { name="Nikolay Mirin", email="nmirin@nvidia.com" },
]
description = "A script to analyze the Git contributors by folder"
readme = "README.md"
requires-python = ">= 3.8"
dynamic = ["version"]
name = "generate-codeowners"
dependencies = [
  "PyYAML >= 6.0.2",
  "aiodns >= 3.2.0",
  "aiofiles >= 24.1.0",
  "aiohttp >= 3.10.11",
  "Brotli >= 1.1.0"
]

[project.scripts]
codeowners-cli = "codeowners_async:main"


[tool.setuptools.dynamic]
version = {attr = "codeowners_async.__version__"}