[build-system]
requires = ["setuptools >= 44.1.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  { name="Nikolay Mirin", email="nmirin@nvidia.com" },
]
description = "A script to analyze the Git contributors by folder"
readme = "README.md"
requires-python = ">= 3.8"
dynamic = ["version"]
name = "generate-codeowners"
dependencies = [
  "certifi >= 2025.8.3",
  "PyYAML >= 6.0.2",
  "aiodns >= 3.2.0",
  "aiofiles >= 24.1.0",
  "aiohttp >= 3.10.11",
  "Brotli >= 1.1.0"
]

[project.scripts]
codeowners-cli = "main:main"


[tool.setuptools.dynamic]
version = {attr = "main.__version__"}

[tool.setuptools]
py-modules = ["main", "async_github_repo_summary", "contributor", "async_helpers", "folders", "organization"]

